<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		tools:context=".DetailHeroActivity">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<ImageView
						android:id="@+id/img_hero"
						android:layout_width="match_parent"
						android:layout_height="200dp"
						tools:src="@color/colorAccent"/>

				<TextView
						android:id="@+id/tv_hero_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/heroes_name"
						android:layout_marginTop="15dp"
						android:textSize="25sp"
						android:textStyle="bold"
						android:textAlignment="center"/>

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/description"
						android:textSize="15sp"
						android:layout_marginTop="15dp"
						android:layout_marginStart="15dp"/>

				<TextView
						android:id="@+id/tv_hero_simple_description"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="15sp"
						android:textAlignment="inherit"
						android:layout_marginTop="15dp"
						android:layout_marginStart="15dp"
						android:text="@string/simple_description"/>

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="15dp"
						android:layout_marginStart="15dp"
						android:textSize="15sp"
						android:text="@string/creator_explain"/>

				<TextView
						android:id="@+id/tv_hero_creator"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="15dp"
						android:layout_marginStart="15dp"
						android:textSize="15sp"
						android:text="@string/creator"/>

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="15dp"
						android:layout_marginStart="15dp"
						android:text="@string/publisher_explain"
						android:textSize="15sp"/>

				<TextView
						android:id="@+id/tv_hero_publisher"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="15dp"
						android:layout_marginStart="15dp"
						android:text="@string/publisher"
						android:textSize="15sp"/>
		</LinearLayout>

</androidx.core.widget.NestedScrollView>