<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="4dp"
		android:layout_marginRight="8dp"
		android:layout_marginBottom="4dp"
		card_view:cardCornerRadius="4dp">

		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:padding="8dp">

				<androidx.appcompat.widget.AppCompatImageView
						android:id="@+id/img_item_photo_card"
						android:layout_width="150dp"
						android:layout_height="220dp"
						android:scaleType="centerCrop"
						android:layout_marginBottom="4dp"
						tools:src="@color/colorAccent"/>

				<TextView
						android:id="@+id/tv_item_name_card"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="16dp"
						android:layout_marginRight="16dp"
						android:layout_marginBottom="8dp"
						android:layout_toEndOf="@id/img_item_photo_card"
						android:layout_toRightOf="@id/img_item_photo_card"
						android:textSize="16sp"
						android:textStyle="bold"
						android:text="@string/heroes_name"/>

				<TextView
						android:id="@+id/tv_item_from_card"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_above="@+id/btn_detail"
						android:layout_below="@id/tv_item_name_card"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:layout_toEndOf="@id/img_item_photo_card"
						android:layout_toRightOf="@id/img_item_photo_card"
						android:ellipsize="end"
						android:maxLines="2"
						android:text="@string/publisher"/>

				<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/btn_detail"
						style="@style/Widget.AppCompat.Button.Colored"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentBottom="true"
						android:layout_marginStart="16dp"
						android:layout_marginLeft="16dp"
						android:layout_toEndOf="@id/img_item_photo_card"
						android:layout_toRightOf="@id/img_item_photo_card"
						android:text="@string/detail"
						android:textSize="12sp"/>

		</RelativeLayout>

</androidx.cardview.widget.CardView>